--- a/docs/css/singlePageTemplate.css
+++ b/docs/css/singlePageTemplate.css
@@ -20,16 +20,16 @@ body {
 }
 /* Navigation */
 header {
-	width: 100%;
-	height: 5%;
-	background-color: #52bad5;
-	border-bottom: 1px solid #2C9AB7;
+    width: 100%;
+    height: 5%;
+    background-color: #09F99C;
+    border-bottom: 1px solid #2C9AB7;
 }
 .logo {
 	color: #fff;
 	font-weight: bold;
 	text-align: undefined;
-	width: 10%;
+	width: 40%;
 	float: left;
 	margin-top: 15px;
 	margin-left: 25px;
