--- a/test/css/index.css
+++ b/test/css/index.css
@@ -47,11 +47,60 @@ main {
 #header>h1 {
     width: 20.83vw;
 }
-
+/* CSS Slide */
 .headerimg {
     padding: 0VW;
     background-color: #E2E2E2;
-}
+    position: relative;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    margin: 0 auto;
+    }
+    .img-01, .img-02, .img-03{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+    .img-01{
+    background-image: url('../images/img-01.jpg');
+    animation: slide-animation-01 24s infinite;
+    }
+    .img-02{
+    background-image: url('../images/img-02.jpg');
+    animation: slide-animation-02 24s infinite;
+    }
+    .img-03{
+    background-image: url('../images/img-03.jpg');
+    animation: slide-animation-03 24s infinite;
+    }
+    @keyframes slide-animation-01 {
+    0% {opacity: 1; transform: scale(1.0);}
+    30% {opacity: 1;}
+    40% {opacity: 0; transform: scale(1.15);}
+    90% {opacity: 0}
+    100% {opacity: 1; transform: scale(1.0);}
+    }
+    @keyframes slide-animation-02 {
+    0% {opacity: 0;}
+    30% {opacity: 0; transform: scale(1.1);}
+    40% {opacity: 1;}
+    60% {opacity: 1;}
+    70% {opacity: 0; transform: scale(1.0);}
+    100% {opacity: 0;}
+    }
+    @keyframes slide-animation-03 {
+    0% {opacity: 0;}
+    60% {opacity: 0;  transform: scale(1.0);}
+    70% {opacity: 1;}
+    90% {opacity: 1;}
+    100% {opacity: 0; transform: scale(1.1);}
+    }
+/* CSS Slide end*/
 
 .headerimg_sp {
     display: none;
@@ -164,7 +213,7 @@ article {
 
 aside {
     background-color: #E2E2E2;
-    margin: 6vw 0vw;
+    margin:2vw 0vw 6vw;
     padding: 6vw;
     width: 70vw;
     display: flex;
@@ -176,6 +225,7 @@ aside {
 .insta_img {
     margin: 0;
     padding: 0;
+    text-align: center;
 
 }
 
@@ -191,6 +241,7 @@ aside {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-left: 5vw;
 }
 
 .checkit h3 {
@@ -288,8 +339,9 @@ aside {
     padding: 0 4vw 4vw;
 }
 
+
 .mapimg img {
-    width: 80%;
+    width: 90%;
 }
 
 .mapaccess h2 {
@@ -307,7 +359,8 @@ address>p, span {
 }
 
 .mapaccess {
-    width: 78%;
+    width: 100%;
+    padding: 0;
 }
 
 .mapaccess p span {
@@ -372,7 +425,7 @@ footer {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin: 0;
+        margin: 10vw 0 0;
     }
 
     .intotxt {
@@ -383,10 +436,12 @@ footer {
     .into_img img {
         width: 50vw;
     }
+    .checkit {
+        padding: 0};
 
     .checkit h3 {
         text-align: left;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .checkit p {
@@ -396,11 +451,17 @@ footer {
 
     aside {
         padding: 3vw;
+        margin: 6vw 0vw;
+
     }
 
     .instabox {
         margin: 0vw;
     }
+    .insta_img img {
+        justify-content: center;
+        margin: 0;
+}
 }
 
 /* sp580size */
@@ -429,11 +490,62 @@ footer {
         display: none;
     }
 
-    .headerimg_sp {
-        display: block;
-        width: 100vw;
-        background-color: #E2E2E2;
+          
+/* CSS Slide for sp 580 */
+.headerimg_sp {
+    display: flex;
+    padding: 0VW;
+    background-color: #E2E2E2;
+    position: relative;
+    width: 600px;
+    height: 600px;
+    overflow: hidden;
+    margin: 0 auto;
     }
+    .img-01sp, .img-02sp, .img-03sp {
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+    .img-01sp {
+    background-image: url('../images/img-01_sp.png');
+    animation: slide-animation-01 24s infinite;
+    }
+    .img-02sp {
+    background-image: url('../images/img-02_sp.png');
+    animation: slide-animation-02 24s infinite;
+    }
+    .img-03sp {
+    background-image: url('../images/img-03_sp.png');
+    animation: slide-animation-03 24s infinite;
+    }
+    @keyframes slide-animation-01 {
+    0% {opacity: 1; transform: scale(1.0);}
+    30% {opacity: 1;}
+    40% {opacity: 0; transform: scale(1.15);}
+    90% {opacity: 0}
+    100% {opacity: 1; transform: scale(1.0);}
+    }
+    @keyframes slide-animation-02 {
+    0% {opacity: 0;}
+    30% {opacity: 0; transform: scale(1.1);}
+    40% {opacity: 1;}
+    60% {opacity: 1;}
+    70% {opacity: 0; transform: scale(1.0);}
+    100% {opacity: 0;}
+    }
+    @keyframes slide-animation-03 {
+    0% {opacity: 0;}
+    60% {opacity: 0;  transform: scale(1.0);}
+    70% {opacity: 1;}
+    90% {opacity: 1;}
+    100% {opacity: 0; transform: scale(1.1);}
+    }
+/* CSS Slide for sp end*/
 
     .menu01, .menu02, .menu03 {
         width: 100%;
@@ -562,7 +674,7 @@ footer {
        justify-content: center;
     }
     .mapimg img {
-        width: 95%;
+        width: 100%;
     }
 
  .mapaccess {
@@ -575,6 +687,11 @@ footer {
     font-size: 4.5vw;
     margin-bottom: 2vw;
 }
+footer {
+    width: 100%;
+    height: 18vw;
+}
+
 }
  /* sp500size */
 @media (max-width: 500px) {
@@ -617,11 +734,64 @@ footer {
             display: none;
         }
 
-        .headerimg_sp {
-            display: block;
-            width: 100vw;
-            background-color: #E2E2E2;
-        }
+            
+/* CSS Slide for sp 390 */
+.headerimg_sp {
+    display: flex;
+    padding: 0VW;
+    background-color: #E2E2E2;
+    position: relative;
+    width: 400px;
+    height: 400px;
+    overflow: hidden;
+    margin: 0 auto;
+    }
+    .img-01sp, .img-02sp, .img-03sp {
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+    .img-01sp {
+    background-image: url('../images/img-01_sp.png');
+    animation: slide-animation-01 24s infinite;
+    }
+    .img-02sp {
+    background-image: url('../images/img-02_sp.png');
+    animation: slide-animation-02 24s infinite;
+    }
+    .img-03sp {
+    background-image: url('../images/img-03_sp.png');
+    animation: slide-animation-03 24s infinite;
+    }
+    @keyframes slide-animation-01 {
+    0% {opacity: 1; transform: scale(1.0);}
+    30% {opacity: 1;}
+    40% {opacity: 0; transform: scale(1.15);}
+    90% {opacity: 0}
+    100% {opacity: 1; transform: scale(1.0);}
+    }
+    @keyframes slide-animation-02 {
+    0% {opacity: 0;}
+    30% {opacity: 0; transform: scale(1.1);}
+    40% {opacity: 1;}
+    60% {opacity: 1;}
+    70% {opacity: 0; transform: scale(1.0);}
+    100% {opacity: 0;}
+    }
+    @keyframes slide-animation-03 {
+    0% {opacity: 0;}
+    60% {opacity: 0;  transform: scale(1.0);}
+    70% {opacity: 1;}
+    90% {opacity: 1;}
+    100% {opacity: 0; transform: scale(1.1);}
+    }
+/* CSS Slide for sp end*/
+           
+
 
         #aboutus {
             width: 100vw;
@@ -747,9 +917,10 @@ footer {
         .checkit h3 {
             display: flex;
             text-align: center;
-            font-size: 1rem;
+            font-size: 1.3rem;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             color: darkorchid;
+            margin-bottom: 2vw;
         }
 
         .checkit p {
